unqiue color for shifts of currently logged in user. fixed mismatching padding and slot size of slots

--- a/laravel/resources/css/pages/_timegrid.scss
+++ b/laravel/resources/css/pages/_timegrid.scss
@@ -92,9 +92,9 @@
     border-radius: 1em;
     display: inline-block;
     box-sizing: border-box;
-    padding: 0.25em;
+    padding: 3pt;
     text-align: center;
-    height: 1.75em;
+    height: 100%;
     font-size: 12pt;
     cursor: pointer;
     min-width: 100px;
@@ -123,6 +123,19 @@
 
 .slot.taken:hover, .slot.taken.active {
     background-color: #dd2559;
+    border: 1px solid #000;
+    text-decoration: none;
+}
+
+.slot.taken-by-current-user {
+    background-color: #36d859;
+    border: 1px solid #fff;
+    line-height: 1em;
+    color: #fff;
+}
+
+.slot.taken-by-current-user:hover, .slot.taken-by-current-user.active {
+    background-color: #28cd4b;
     border: 1px solid #000;
     text-decoration: none;
 }
